objects/EUR_CRM_ObjPromo__c.object
<CustomObject>
    <description>EUR Universal Sales Activities - Objectives and Promotions</description>
    <fields>
        <fullName>EUR_CRM_Account_Selection_Type__c</fullName>
        <label>Select Accounts by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Taxonomy</fullName>
                </value>
                <value>
                    <fullName>PROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active_End_Date__c</fullName>
        <label>Active End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active_Start_Date__c</fullName>
        <label>Active Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Objectives / Promotions (EU)</relationshipLabel>
        <relationshipName>Objectives_Promotions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar Branding</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>New Listing</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Leaflet</fullName>
                </value>
                <value>
                    <fullName>KIM&apos;s</fullName>
                </value>
                <value>
                    <fullName>FHG Packages</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Special Edition</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Special Sales Activity</fullName>
                </value>
                <value>
                    <fullName>Salesdrive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Compliance_Period_End_Date__c</fullName>
        <label>Compliance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerTaxonomy_Chain__c</fullName>
        <label>Customer Taxonomy Chain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerTaxonomy_Level_1__c</fullName>
        <label>Customer Taxonomy Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerTaxonomy_Level_2__c</fullName>
        <label>Customer Taxonomy Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerTaxonomy_Level_3__c</fullName>
        <label>Customer Taxonomy Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerTaxonomy_Mgmt_Type__c</fullName>
        <label>Customer Taxonomy Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regie</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Taxonomy_Chain_Region__c</fullName>
        <label>Customer Taxonomy Chain Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</fullName>
        <label>Customer Taxonomy Sub Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DocServer_Asset_Tags__c</fullName>
        <description>Associate Document Server Tags on files to a particular Objective / Promotion</description>
        <label>Document Server Asset Tags</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Evaluation_Period_End_Date__c</fullName>
        <label>Evaluation Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Publish_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been created as requested by Genio in order to be able to place the Publish button on the main O/P Header</description>
        <label>Is Publish ready ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Leaflet_Code__c</fullName>
        <label>Leaflet Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>X/G</fullName>
                </value>
                <value>
                    <fullName>X/G/T</fullName>
                </value>
                <value>
                    <fullName>X/T</fullName>
                </value>
                <value>
                    <fullName>G/T</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>XT</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>FK</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>GX</fullName>
                </value>
                <value>
                    <fullName>HF</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>KIP</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>PJ</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SX</fullName>
                </value>
                <value>
                    <fullName>SÜ</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/O</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Leaflet_Description__c</fullName>
        <formula>CASE( TEXT( EUR_CRM_Leaflet_Code__c) , 
&apos;X&apos;, &apos;Aktion&apos;, 
&apos;X/G&apos;,&apos;Aktion Food/Gastro&apos;,
&apos;X/G/T&apos;, &apos;Aktion Food/Gastro/Trader&apos;,
&apos;X/T&apos;, &apos;Aktion Food/Trader&apos;,
&apos;G/T&apos;, &apos;Aktion Gastro/Trader&apos;,
&apos;P&apos;, &apos;Aktion geplant&apos;,
&apos;XT&apos;, &apos;Aktion Teilweise&apos;,
&apos;C&apos;, &apos;Copernic Absprache&apos;,
&apos;E&apos;, &apos;Europa Aktion&apos;,
&apos;FK&apos;, &apos;Feinkosthandzettel&apos;,
&apos;F&apos;, &apos;Food HZ&apos;,
&apos;G&apos;, &apos;Gastro-Journal&apos;,
&apos;GX&apos;, &apos;Gepa fix&apos;,
&apos;HF&apos;, &apos;Herofeld Aktion&apos;,
&apos;I&apos;, &apos;Infomercial&apos;,
&apos;K&apos;, &apos;Knülleraktion&apos;,
&apos;KIP&apos;, &apos;Kunden individuelle Promotion&apos;,
&apos;N&apos;, &apos;Nationale Aktion&apos;,
&apos;PK&apos;, &apos;Präsentkatalog Jahresende&apos;,
&apos;PJ&apos;, &apos;Profi Journal&apos;,
&apos;R&apos;, &apos;Regionale Aktion&apos;,
&apos;SH&apos;, &apos;Schwerpunktaktivitäten&apos;,
&apos;SA&apos;, &apos;Sonderabsprache&apos;,
&apos;SX&apos;, &apos;Sonderhandzettel&apos;,
&apos;SÜ&apos;, &apos;Süd&apos;,
&apos;SW&apos;, &apos;Südwest&apos;,
&apos;MI&apos;, &apos;Mitte&apos;,
&apos;No&apos;, &apos;Nord&apos;,
&apos;N/O&apos;, &apos;Nord/Ost&apos;,
&apos;O&apos;, &apos;Ost&apos;,
&apos;TW&apos;, &apos;Themenwerbung&apos;,
&apos;T&apos;, &apos;Trader Journal&apos;,
&apos;&apos;)</formula>
        <label>Leaflet Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MAF_ID__c</fullName>
        <label>MAF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Action_List_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>O/P Action List Template</label>
        <referenceTo>EUR_CRM_OP_Action_List_Template__c</referenceTo>
        <relationshipName>EUR_CRM_ObjPromo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_O_P_Type__c</fullName>
        <label>O/P Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo_OnTrade_Variation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O/P Promo Variation</label>
        <referenceTo>EUR_CRM_ObjPromo_OnTrade_Variation__c</referenceTo>
        <relationshipName>Objectives_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Override_CTax_PrepStartDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Cust. Taxonomy Prep Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Type__c</fullName>
        <label>POSM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branded Pallets</fullName>
                </value>
                <value>
                    <fullName>Non-Branded Pallets</fullName>
                </value>
                <value>
                    <fullName>Creative Equipment</fullName>
                </value>
                <value>
                    <fullName>Branded Racks</fullName>
                </value>
                <value>
                    <fullName>Printed Materials</fullName>
                </value>
                <value>
                    <fullName>Branded Stand</fullName>
                </value>
                <value>
                    <fullName>Shelf Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PROS_Group_Outlet__c</fullName>
        <label>PROS Group Outlet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PROS_Image_Level__c</fullName>
        <label>PROS Image Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Preparation_Start_Date__c</fullName>
        <label>Preparation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Hierarchy_Level__c</fullName>
        <label>Product Hierarchy Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BQ</fullName>
                </value>
                <value>
                    <fullName>BQS</fullName>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PromoType_picklist__c</fullName>
        <label>PromoType - picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Campaign</fullName>
                </value>
                <value>
                    <fullName>In-Store Media-POSM Control</fullName>
                </value>
                <value>
                    <fullName>Leaflet Campaign</fullName>
                </value>
                <value>
                    <fullName>Additional placement -</fullName>
                </value>
                <value>
                    <fullName>Epicenter Store</fullName>
                </value>
                <value>
                    <fullName>On-Site Promo Activities</fullName>
                </value>
                <value>
                    <fullName>Outlet Staff Incentive</fullName>
                </value>
                <value>
                    <fullName>POSM Placement Non Branded</fullName>
                </value>
                <value>
                    <fullName>POSM Placement Branded</fullName>
                </value>
                <value>
                    <fullName>Sales Rep Competition</fullName>
                </value>
                <value>
                    <fullName>Stop Rayon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promo_ID_Off_Trade__c</fullName>
        <displayFormat>pf{000000}</displayFormat>
        <label>Promo ID (Off Trade)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promo_ID_On_Trade__c</fullName>
        <description>For RU - Unique system generated ID for ON Trade Promos</description>
        <displayFormat>pn{000000}</displayFormat>
        <label>Promo ID (On Trade)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Regions</fullName>
                </value>
                <value>
                    <fullName>On Trade Region 1</fullName>
                </value>
                <value>
                    <fullName>On Trade Region 2</fullName>
                </value>
                <value>
                    <fullName>On Trade Region 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_Out_Volume_Per_Promo_Kit__c</fullName>
        <label>Sell Out Volume (Liters) Per Promo Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Compliance Evaluation</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Under Evaluation</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Preparation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Territories</fullName>
                </value>
                <value>
                    <fullName>On Trade Territory 1</fullName>
                </value>
                <value>
                    <fullName>On Trade Territory 9</fullName>
                </value>
                <value>
                    <fullName>On Trade Territory 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Objective</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Objectives / Promotions (EU)</label>
    <listViews>
        <fullName>All_DK_EM_Price_Promotions_OPDeactivated</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Preparation_Start_Date__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_CustomerTaxonomy_Chain__c</columns>
        <columns>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_DK_Off_Trade_EM_Price_Promotion</value>
        </filters>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Deactivated</value>
        </filters>
        <label>All DK EM Price Promotions OPDeactivated</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_EM_Price_Promotions_OPs_Active</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Preparation_Start_Date__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_CustomerTaxonomy_Chain__c</columns>
        <columns>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_DK_Off_Trade_EM_Price_Promotion</value>
        </filters>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All DK EM Price Promotions OPs Active</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_EM_Price_Promotions_OPs_Committed</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Preparation_Start_Date__c</columns>
        <columns>EUR_CRM_CustomerTaxonomy_Chain__c</columns>
        <columns>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_DK_Off_Trade_EM_Price_Promotion</value>
        </filters>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Committed</value>
        </filters>
        <label>All DK EM Price Promotions OPs Committed</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_EM_Price_Promotions_OPs_Publish</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Preparation_Start_Date__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_CustomerTaxonomy_Chain__c</columns>
        <columns>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_DK_Off_Trade_EM_Price_Promotion</value>
        </filters>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>All DK EM Price Promotions OPs Published</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_OPs</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_BE_Off_Trade_Sales_Drive,EUR_CRM_ObjPromo__c.EUR_BE_Off_Trade_Secondary_placement_Spyder_display</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_BE_On_Trade_Display_Placement_For_Special_Cavist</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_BE_On_Trade_Promo_Kit_Activation</value>
        </filters>
        <label>EUR BE OPs</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_PT_O_Ps</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_PT_Off_Trade_OP_No_of_Display</value>
        </filters>
        <label>All PT O/Ps</label>
        <language>en_ZA</language>
        <sharedTo>
            <role>EMEA</role>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_EUR_PT_All_Objectives_Promotions_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_PT_Off_Trade_OP_No_of_Display</value>
        </filters>
        <label>EUR PT All ObjectivesandPromotions View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_P_O</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>EUR DE All P/O</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_P_O2</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Objective</value>
        </filters>
        <filters>
            <field>EUR_CRM_Type__c</field>
            <operation>equals</operation>
            <value>Promotion</value>
        </filters>
        <label>All DE O/P</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_EM_Price_Promotions_OPs</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Preparation_Start_Date__c</columns>
        <columns>EUR_CRM_CustomerTaxonomy_Chain__c</columns>
        <columns>EUR_CRM_Customer_Taxonomy_Sub_Chain__c</columns>
        <columns>EUR_CRM_Active_Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Active_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo__c.EUR_DK_Off_Trade_EM_Price_Promotion</value>
        </filters>
        <label>All DK EM Price Promotions OPs</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>